#                    "Merged from", "Cleanup", "Issue"                         #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------
CR-2009-05-27-0: Bugfix:     tight_integration_job_finished() job_state "unkown"
                             is not an indication that job is finished anymore.
                             This might be the reason why tight_integration test
                             sometimes reports "only x of y jobs finished" and
                             failed.
                 Review:     DG

RH-2009-05-26-0: Enhancem.:  Hedeby: new test for issue 656
                 Review:     MG

AP-2009-05-25-0: Bugfix:     fixed broken ARCo installation
                 Belongs to: AP-2009-05-21-0
                 Review:     JF

MD-2009-05-25-0: Bugfix:     fixed broken installer messages
                 Belongs to: MD-2009-05-22-0
                 Review:     CR

LP-2009-05-22-1: Bugfix:     Can't change JMX port value to 0
                 Bugfix:     TS updated for removed -no-jmx option
                 Belongs to: LP-2009-05-22-0
                 Review:     CR

LP-2009-05-22-0: Bugfix:     Shadow autoinstall fails when classic spooling is
                             used
                 Bugfix:     TS updated for removed -no-jmx option
                 Bugfix:     TS fails when using first level directory (e.g.:
                             /sge) as SGE_ROOT
                 Enhancem.:  JMX now requires java 1.5+ and not stricly 1.5
                 Review:     AP

HP-2009-05-22-0: Enhancem.:  Improved error messages, added comments, adjusted
                             timeouts
                 Changed:    system_tests/clients/qrsh/check.61.exp
